...
    <string name="password_hit">用户密码</string>
    <!-- ReLogin/login/register界面中使用到的字符串 -->
    <string name="change_user_btn">切换账号</string>
    <string name="register">注册</string>
    <string name="registering_hint">注册中</string>
    <string name="register_failed_toast">注册失败</string>
    <string name="login">登录</string>
    <string name="login_hint">登录中</string>
    <string name="user_not_exist_toast">该用户不存在</string>
    <string name="jmui_user_already_exist_toast">该用户已存在</string>
    <string name="user_add_self_toast">不能添加自己为好友</string>
    <string name="register_username_hit">用户名(数字、字母、_ 组成)</string>
    <string name="username_not_null_toast">用户名不能为空</string>
...
